# Kairex

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  devbox.json  docker-compose.dev.yml  docker-compose.yml  justfile
.githooks/: pre-commit
.github/workflows/: ci.yml
ansible/: ansible.cfg
ansible/inventory/: production.ini
ansible/playbooks/: deploy.yml  docker.yml  harden.yml  setup-dev-vpn.yml  teardown-wireguard.yml  wireguard.yml
ansible/vars/: secrets.yml
config/: collection.toml  evaluation.toml  llm.toml  operator.toml  schedules.toml  thresholds.toml
docs/: DESIGN.md  DEV_VPN.md  ROADMAP.md
kairex/: Cargo.toml
kairex-bin/: Cargo.toml
kairex-bin/src/: main.rs
kairex/src/: lib.rs
kairex/src/analysis/: context.rs  error.rs  indicators.rs  mod.rs  subprocess.rs
kairex/src/collection/: backfill.rs  error.rs  event.rs  mod.rs  polling.rs
kairex/src/collection/binance/: convert.rs  mod.rs  rest.rs  types.rs  websocket.rs
kairex/src/config/: analysis.rs  assets.rs  collection.rs  delivery.rs  evaluation.rs  llm.rs  mod.rs  operator.rs  schedules.rs
kairex/src/delivery/: error.rs  format.rs  mod.rs  routing.rs  telegram.rs
kairex/src/evaluation/: error.rs  mod.rs  trigger.rs
kairex/src/llm/: api_types.rs  client.rs  mod.rs  types.rs
kairex/src/llm/schemas/: alert.rs  evening.rs  midday.rs  mod.rs  morning.rs  weekly.rs
kairex/src/observability/: mod.rs
kairex/src/operator/: mod.rs  telegram.rs
kairex/src/orchestrator/: error.rs  mod.rs
kairex/src/scheduling/: mod.rs
kairex/src/storage/: connection.rs  error.rs  market_data.rs  migrations.rs  mod.rs  models.rs  retention.rs  system_output.rs
kairex/src/storage/migrations/: 001_initial_schema.sql  002_add_setup_fields.sql
observability/alloy/: config.alloy
observability/loki/: loki.yaml
observability/prometheus/: prometheus.yml
observability/tempo/: tempo.yaml
prompts/: editor_identity.md  editor_system.md  identity.md  system.md
prompts/schemas/: alert.json  editor.json  (+4 more)
scripts/: build_context.py  compute_indicators.py  manifest.toml  requirements.txt
(+36 files in other folders)
