[package]
name = "kairex"
version = "0.1.0"
edition = "2021"
description = "AI-powered crypto market analysis engine"
license = "AGPL-3.0-only"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
