[package]
name = "kairex"
version = "0.1.0"
edition = "2021"
description = "AI-powered crypto market analysis engine"
license = "AGPL-3.0-only"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
